change title of homepage

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>react-typescript-library-template</title>
+    <title>React Ambient</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;1,500&display=swap"
       rel="stylesheet"
